[package]
name = "loc_counter"
version = "0.1.0"
edition = "2024"
authors = ["Aditya Mandal <mandaladitya1614@gmail.com>"]
description = "A fast lines of code counter"
license = "MIT"
repository = "https://github.com/Aditya-1304/loc-counter"
homepage = "https://github.com/Aditya-1304/loc-counter"
readme = "README.md"
keywords = ["cli", "loc", "lines-of-code", "code-counter", "productivity"]
categories = ["command-line-utilities", "development-tools"]
# This tells cargo which binary to build

[[bin]]
name = "loc"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.56", features = ["derive"] }
colored = "3.1.1"
ignore = "0.4.25"
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
